[zadig] add icon when libusb-win32 filter driver is detected
* also use "libusb-win32" for driver name instead of "libusb0"

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -142,6 +142,7 @@ BEGIN
     EDITTEXT        IDC_PID,70,63,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_MI,100,63,17,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
     PUSHBUTTON      "",IDC_VID_REPORT,118,62,16,15,NOT WS_VISIBLE
+    ICON            "",IDC_FILTER_ICON,145,60,20,20,SS_NOTIFY | SS_REALSIZEIMAGE | NOT WS_VISIBLE
     LTEXT           "WCID",IDC_STATIC_WCID,14,84,21,9,SS_NOTIFY
     EDITTEXT        IDC_WCID_BOX,40,82,14,14,ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_WCID,55,82,44,14,ES_READONLY | NOT WS_VISIBLE | NOT WS_TABSTOP,WS_EX_TRANSPARENT
