--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 *.vcproj        eol=crlf
 *.vcxproj*      eol=crlf
 *.inf.in        eol=crlf
+*.rc            eol=crlf
 *.sh            export-ignore
 .gitattributes  export-ignore
 .gitignore      export-ignore
