--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -208,16 +208,16 @@ BEGIN
     BEGIN
         BLOCK "000904b0"
         BEGIN
-            VALUE "Comments", "http://libwdi.sf.net"
             VALUE "CompanyName", "akeo.ie"
-            VALUE "FileDescription", "Zadig Application"
-            VALUE "FileVersion", "2, 0, 0, 147"
+            VALUE "FileDescription", "Zadig: The Automated Driver Installer (GUI version)"
+            VALUE "FileVersion", "2.0.0.147"
             VALUE "InternalName", "zadig"
-            VALUE "LegalCopyright", "GNU LGPL v3 or later"
+            VALUE "LegalCopyright", "(c) 2010-2011 Pete Batard (GNU LGPL v3)"
             VALUE "LegalTrademarks", "http://www.gnu.org/copyleft/lesser.html"
             VALUE "OriginalFilename", "zadig.exe"
             VALUE "ProductName", "zadig"
-            VALUE "ProductVersion", "2, 0, 0, 147"
+            VALUE "ProductVersion", "2.0.0.147"
+            VALUE "WWW", "http://libwdi.sf.net"
         END
     END
     BLOCK "VarFileInfo"
