[zadig] add hyperlinks to libusb 1.0, win32 and K on frontend
* also fade down background image + increase clickable area for WCID help

--- a/examples/.msvc/zadig_2010.vcxproj
+++ b/examples/.msvc/zadig_2010.vcxproj
@@ -172,7 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\split.ico" />
-    <None Include="..\wdi.bmp" />
+    <None Include="..\zadig.bmp" />
     <None Include="..\zadig.ico" />
   </ItemGroup>
   <ItemGroup>
