--- a/examples/.msvc/zadig_2010.vcxproj.filters
+++ b/examples/.msvc/zadig_2010.vcxproj.filters
@@ -46,7 +46,7 @@
     <None Include="..\split.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="..\wdi.bmp">
+    <None Include="..\zadig.bmp">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
