[zadig] switch to GPLv3 + License and other About dialog improvements

--- a/examples/.msvc/zadig_2008.vcproj
+++ b/examples/.msvc/zadig_2008.vcproj
@@ -343,6 +343,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\zadig_license.h"
+				>
+			</File>
+			<File
 				RelativePath="..\zadig_resource.h"
 				>
 			</File>
