--- a/examples/.msvc/zadig_2010.vcxproj.filters
+++ b/examples/.msvc/zadig_2010.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="..\zadig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\zadig_license.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\zadig.ico">
