--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -161,20 +161,27 @@ BEGIN
     LTEXT           "libusb-1.0",IDC_LIBUSB1_URL,313,60,34,9,SS_NOTIFY
     LTEXT           "libusb-win32",IDC_LIBUSB0_URL,313,71,43,9,SS_NOTIFY
     LTEXT           "libusbK",IDC_LIBUSBK_URL,313,81,26,9,SS_NOTIFY
+    LTEXT           "Useful Links:",IDC_LINKS,304,39,58,10
 END
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
+IDD_ABOUTBOX DIALOGEX 0, 0, 287, 195
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About Zadig"
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
-    ICON            IDI_ZADIG,IDC_ABOUT_ICON,10,21,20,20
-    LTEXT           "Zadig v2.0.0.147",IDC_STATIC,42,14,114,8,SS_NOPREFIX
-    LTEXT           "Copyright (c) 2010-2011 Pete Batard",IDC_STATIC,41,40,139,8
-    DEFPUSHBUTTON   "OK",IDOK,167,72,50,14,WS_GROUP
-    LTEXT           "Part of the libwdi project:",IDC_STATIC,41,27,77,8,SS_NOPREFIX
-    CONTROL         "<a href=""http://libwdi.sf.net"">http://libwdi.sf.net</a>",IDC_URL,
-                    "SysLink",WS_TABSTOP,121,27,90,14
+    ICON            IDI_ZADIG,IDC_ABOUT_ICON,11,8,21,20
+    LTEXT           "Zadig",IDC_ZADIG_BOLD,46,8,25,8,SS_NOPREFIX | SS_NOTIFY
+    LTEXT           "Copyright (c) 2010-2011 Pete Batard",IDC_STATIC,46,36,139,8
+    DEFPUSHBUTTON   "OK",IDOK,231,174,50,16,WS_GROUP
+    CONTROL         "<a href=""http://libwdi.sf.net"">http://libwdi.sf.net</a>",IDC_ABOUT_LIBWDI_URL,
+                    "SysLink",WS_TABSTOP,46,47,62,9
+    LTEXT           "Version 2.0.0 (Build 147)",IDC_STATIC,46,19,78,8
+    DEFPUSHBUTTON   "License...",IDC_ABOUT_LICENSE,46,174,50,16,WS_GROUP
+    EDITTEXT        IDC_ABOUT_COPYRIGHTS,46,107,235,63,ES_MULTILINE | ES_READONLY | WS_VSCROLL
+    LTEXT           "Report bugs or request enhancements at:",IDC_STATIC,46,66,187,8
+    LTEXT           "Portions copyright:",IDC_STATIC,46,95,59,8
+    CONTROL         "<a>http://sourceforge.net/apps/trac/libwdi/newticket</a>",IDC_ABOUT_BUG_URL,
+                    "SysLink",WS_TABSTOP,46,76,203,14
 END
 
 IDD_NOTIFICATION DIALOGEX 0, 0, 263, 63
@@ -187,6 +194,15 @@ BEGIN
     ICON            32516,IDC_NOTIFICATION_ICON,6,6,20,20
     LTEXT           "",IDC_NOTIFICATION_TEXT,35,10,219,20
     PUSHBUTTON      "Close",IDC_NOTIFICATION_CLOSE,211,44,43,14
+END
+
+IDD_LICENSE DIALOGEX 0, 0, 335, 205
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Zadig License"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "Close",IDOK,278,185,50,16
+    EDITTEXT        IDC_LICENSE_TEXT,7,7,321,176,ES_MULTILINE | ES_READONLY | WS_VSCROLL
 END
 
 
@@ -246,12 +262,19 @@ BEGIN
 
     IDD_ABOUTBOX, DIALOG
     BEGIN
-        RIGHTMARGIN, 217
-        BOTTOMMARGIN, 62
+        BOTTOMMARGIN, 191
     END
 
     IDD_NOTIFICATION, DIALOG
     BEGIN
+    END
+
+    IDD_LICENSE, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 328
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 200
     END
 END
 #endif    // APSTUDIO_INVOKED
