--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -229,7 +229,7 @@ BEGIN
         BLOCK "000904b0"
         BEGIN
             VALUE "CompanyName", "akeo.ie"
-            VALUE "FileDescription", "Zadig: The Automated Driver Installer (GUI version)"
+            VALUE "FileDescription", "Zadig Application"
             VALUE "FileVersion", "2.0.0.148"
             VALUE "InternalName", "zadig"
             VALUE "LegalCopyright", "(c) 2010-2011 Pete Batard (GNU LGPL v3)"
