--- a/examples/zadic.rc
+++ b/examples/zadic.rc
@@ -73,7 +73,7 @@ BEGIN
         BLOCK "000904b0"
         BEGIN
             VALUE "CompanyName", "akeo.ie"
-            VALUE "FileDescription", "Zadig: The Automated Driver Installer (Console version)"
+            VALUE "FileDescription", "Zadic Application"
             VALUE "FileVersion", "1.1.1.148"
             VALUE "InternalName", "zadic"
             VALUE "LegalCopyright", "(c) 2010-2011 Pete Batard (GNU LGPL v3)"
