[zadig] more UI aesthetics for links overlay

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -149,19 +149,18 @@ BEGIN
     LTEXT           "ð",IDC_RARR,142,44,17,14,SS_NOTIFY | SS_CENTERIMAGE | NOT WS_VISIBLE
     EDITTEXT        IDC_TARGET,162,44,98,14,ES_READONLY | NOT WS_TABSTOP
     CONTROL         "",IDC_TARGETSPIN,"msctls_updown32",UDS_ARROWKEYS,260,44,11,14,WS_EX_TRANSPARENT
-    GROUPBOX        "",IDC_STATIC,278,32,97,72
-    CONTROL         106,IDC_THIS_SPACE_FOR_RENT,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_REALSIZEIMAGE,281,45,90,50
+    CONTROL         106,IDC_THIS_SPACE_FOR_RENT,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_REALSIZEIMAGE,278,37,97,66
     EDITTEXT        IDC_INFO,12,109,357,162,ES_MULTILINE | ES_READONLY | WS_VSCROLL
     GROUPBOX        "",IDC_GROUPLOG,6,99,369,199
     PUSHBUTTON      "Clear Log",IDC_CLEAR,137,276,50,14
     PUSHBUTTON      "Save Log",IDC_SAVE,192,276,50,14
     ICON            "",IDC_WCID_ICON,42,83,20,20,SS_NOTIFY | SS_REALSIZEIMAGE
     LTEXT           "?",IDC_WCID_URL,34,81,6,13,SS_NOTIFY
-    LTEXT           "libwdi",IDC_LIBWDI_URL,313,49,21,9,SS_NOTIFY
-    LTEXT           "libusb-1.0",IDC_LIBUSB1_URL,313,60,34,9,SS_NOTIFY
-    LTEXT           "libusb-win32",IDC_LIBUSB0_URL,313,71,43,9,SS_NOTIFY
-    LTEXT           "libusbK",IDC_LIBUSBK_URL,313,81,26,9,SS_NOTIFY
-    LTEXT           "Useful Links:",IDC_LINKS,304,39,58,10
+    LTEXT           "More Information",IDC_LINKS,296,43,76,10
+    LTEXT           "WinUSB (libusb-1.0)",IDC_LIBUSB1_URL,297,54,65,9,SS_NOTIFY
+    LTEXT           "libusb-win32",IDC_LIBUSB0_URL,297,65,42,9,SS_NOTIFY
+    LTEXT           "libusbK",IDC_LIBUSBK_URL,297,76,25,9,SS_NOTIFY
+    LTEXT           "WinUSB (Microsoft)",IDC_WINUSB_URL,297,87,65,9,SS_NOTIFY
 END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 287, 195
