--- a/examples/wdi-simple.rc
+++ b/examples/wdi-simple.rc
@@ -23,16 +23,16 @@ BEGIN
     BEGIN
         BLOCK "000904b0"
         BEGIN
-            VALUE "CompanyName", "libusb.org"
-            VALUE "FileDescription", "WDI-Simple: Simple libwdi-based Installer"
+            VALUE "CompanyName", "akeo.ie"
+            VALUE "FileDescription", "WDI-Simple"
             VALUE "FileVersion", "1.2.0.151"
-            VALUE "InternalName", "wdi-simple"
-            VALUE "LegalCopyright", "(c) 2010-2011 Pete Batard (GNU LGPL v3)"
+            VALUE "InternalName", "WDI-Simple"
+            VALUE "LegalCopyright", "© 2010-2011 Pete Batard (LGPL v3)"
             VALUE "LegalTrademarks", "http://www.gnu.org/copyleft/lesser.html"
             VALUE "OriginalFilename", "wdi-simple.exe"
-            VALUE "ProductName", "wdi-simple"
+            VALUE "ProductName", "WDI-Simple"
             VALUE "ProductVersion", "1.2.0.151"
-            VALUE "WWW", "http://libwdi.sf.net"
+            VALUE "Comments", "http://libwdi.sf.net"
         END
     END
     BLOCK "VarFileInfo"
