--- a/libwdi/libwdi.rc
+++ b/libwdi/libwdi.rc
@@ -66,17 +66,16 @@ BEGIN
     BEGIN
         BLOCK "000904b0"
         BEGIN
-            VALUE "Comments", "http://libusb.org/wiki/libwdi"
             VALUE "CompanyName", "akeo.ie"
             VALUE "FileDescription", "libwdi: Windows Driver Installer Library"
             VALUE "FileVersion", "1.2.0.151"
             VALUE "InternalName", "libwdi"
-            VALUE "LegalCopyright", "(c) 2010-2011 Pete Batard (GNU LGPL v3)"
+            VALUE "LegalCopyright", "© 2010-2011 Pete Batard (LGPL v3)"
             VALUE "LegalTrademarks", "http://www.gnu.org/copyleft/lesser.html"
             VALUE "OriginalFilename", "libwdi"
             VALUE "ProductName", "libwdi"
             VALUE "ProductVersion", "1.2.0.151"
-            VALUE "WWW", "http://libwdi.sf.net"
+            VALUE "Comments", "http://libwdi.sf.net"
         END
     END
     BLOCK "VarFileInfo"
